// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.issues;

import "ws-commons.proto";

option java_package = "org.sonarqube.ws";
option java_outer_classname = "SecurityReports";
option optimize_for = SPEED;

// Response of GET api/security_reports/show
message ShowWsResponse {
  repeated SecurityStandardCategoryStatistics categories = 6;
}

message SecurityStandardCategoryStatistics {
  optional string category = 1;
  optional int64 vulnerabilities = 2;
  optional int64 vulnerabilityRating = 3;
  optional int64 toReviewSecurityHotspots = 5;
  optional int64 reviewedSecurityHotspots = 6;
  optional int64 securityReviewRating = 7;
  repeated CweStatistics distribution = 8;
  optional int64 activeRules = 9;
  optional int64 totalRules = 10;
  optional bool hasMoreRules = 11;
  optional string version = 12;
  optional string level = 13;
}

message CweStatistics {
  optional string cwe = 1;
  optional int64 vulnerabilities = 2;
  optional int64 vulnerabilityRating = 3;
  optional int64 toReviewSecurityHotspots = 5;
  optional int64 reviewedSecurityHotspots = 6;
  optional int64 securityReviewRating = 7;
  optional int64 activeRules = 8;
  optional int64 totalRules = 9;
  optional bool hasMoreRules = 10;
  optional string category = 11;
}


